Thu Jun  6 17:42:12 2002  J"orn Rennecke <joern.rennecke@superh.com>

	* config/tc-sh.c (parse_at): @(symbol,pc) is A_DISP_PC again,
	but warn about it.
	* testsuite/gas/sh/pcrel.s: Also test @(symbol,pc).
	* testsuite/gas/sh/pcrel.d: Update.
	* testsuite/gas/sh/pcrel.l: New file.

2002-06-06  Daniel Jacobowitz  <drow@mvista.com>

	* tc-mips.c (mips_after_parse_args): Always set mips_opts.ase_mips3d
	and mips_opts.ase_mdmx if they are uninitialized.

2002-06-06  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* gas/config/tc-hppa.c (pa_ip): Replace "L$0\001" with FAKE_LABEL_NAME.
	(hppa_force_relocation): Check if a stub just before the start symbol
	of the last call_info is reachable before forcing relocation.  Fix
	typo.

2002-06-04  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* config/tc-mips.c (mips_after_parse_args): New function.
	(md_begin): Move processing of defaults to mips_after_parse_args.
	config/tc-mips.h (md_after_parse_args): Define.

2002-06-04  Jason Thorpe  <thorpej@wasabisystems.com>

	* configure.in (sh5*): Set cpu_type to sh64 and endian to big.
	(sh5le*, sh64le*): Set cpu_type to sh64 and endian to little.
	(sh5*-*-netbsd*, sh64*-*-netbsd*): New targets.
	* configure: Regenerate.
	* config/tc-sh64.c (sh64_target_format): Add support for NetBSD
	environment.

2002-06-04  Jason Thorpe  <thorpej@wasabisystems.com>

	* config/tc-sh64.h (MD_PCREL_FROM_SECTION): Undef before redefining.

2002-06-04  Alan Modra  <amodra@bigpond.net.au>

	* config/obj-elf.c (obj_elf_change_section): Set and check elf
	linkonce flag.  Print all warnings.
	(obj_elf_section): Parse ",comdat" for groups.
	(elf_frob_file): Set SEC_LINK_ONCE on COMDAT groups.  Check
	consistency of comdat flag.

2002-06-02  Richard Henderson  <rth@redhat.com>

	* config/tc-alpha.c (alpha_adjust_symtab_relocs): Fix thinko
	with LITERALs without sequence numbers.

2002-06-01  Richard Henderson  <rth@redhat.com>

	* config/tc-alpha.c: Move LITUSE constants to "elf/alpha.h".